Minor wording change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<li class="icon solid fa-laptop-code">Write C/C++, Python, Java, Verilog, etc., etc.</li>
 										<li class="icon solid fa-broadcast-tower">RF Propagation Studies for LPWAN sensor deployments</li>
 										<li class="icon solid fa-map-marked">Select/develop hardware and deploy sensors for real-time measurement systems with the USGS</li>
-										<li class="icon solid fa-edit">Write technical documents and manuals (with added groan-worthy puns)</li>
+										<li class="icon solid fa-edit">Write technical documents and manuals</li>
 										<li class="icon solid fa-mountain">Climb rocks and hike mountains and such</li>
 									</ul>
 									<p>And if you're looking for some of this info in a more complete and professional form, <a href=./documents/Reese_Grimsley_CV.pdf> Here's my CV</a> (as of 1/1/2020).
