--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Reese Grimsley</a></h1>
 					<p>Ph.D. Student at Carnegie Mellon<br />
-					IoT and Federated CPS</p>
+					Time-sensitive IoT</p>
 				</header>
 				<nav id="nav">
 					<ul>
