Hide incomplete post

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<ul>
 						<li><a href="#elevator" class="active">About</a></li>
 						<li><a href="#things">Things I Can Do</a></li>
-						 <li><a href="#posts">Activity and Posts</a></li>
-						 <li><a href="#contact">Contact</a></li> 
+						<li><a href="#posts">Activity and Posts</a></li>
+						<li><a href="#contact">Contact</a></li> 
 
 					</ul>
 				</nav>
@@ -77,59 +77,59 @@
 					</section>
 
 					<!-- Skills and hobbies -->
-						<section id="things">
-							<div class="container">
-								<h3>Things I Can Do</h3>
-								<p>Along the way, I've learned to do some things. Here are some of those things (not exhaustive):</p>
-								<ul class="feature-icons">
-									<li class="icon solid fa-microchip">Design, Build, and Test PCBs for high performance, low-power sensor devices</li>
-									<li class="icon solid fa-laptop-code">Write C/C++, Python, NodeJS for embedded systems, data analytics & ML, and distributed time-sensitive runtimes</li>
-									<li class="icon solid fa-broadcast-tower">RF Propagation Studies for LPWAN/LoRaWAN sensor deployments</li>
-									<li class="icon solid fa-map-marked">Select/develop hardware & firmware; deploy sensors for real-time measurement systems</li>
-									<li class="icon solid fa-tasks">Data Science & Machine Learning for Signal Processing, like Activity Recognition</li>
-									<li class="icon solid fa-mountain">Climb rocks and hike mountains and such</li>
-								</ul>
-								<p style="font-size:120%;">And if you're looking for some of this info in a more complete and professional form, Here's my <a href="./documents/Reese Grimsley Resume.pdf">resume</a> and <a href=./documents/Reese_Grimsley_CV.pdf>CV</a> (Updated 7/17/2021).
+					<section id="things">
+						<div class="container">
+							<h3>Things I Can Do</h3>
+							<p>Along the way, I've learned to do some things. Here are some of those things (not exhaustive):</p>
+							<ul class="feature-icons">
+								<li class="icon solid fa-microchip">Design, Build, and Test PCBs for high performance, low-power sensor devices</li>
+								<li class="icon solid fa-laptop-code">Write C/C++, Python, NodeJS for embedded systems, data analytics & ML, and distributed time-sensitive runtimes</li>
+								<li class="icon solid fa-broadcast-tower">RF Propagation Studies for LPWAN/LoRaWAN sensor deployments</li>
+								<li class="icon solid fa-map-marked">Select/develop hardware & firmware; deploy sensors for real-time measurement systems</li>
+								<li class="icon solid fa-tasks">Data Science & Machine Learning for Signal Processing, like Activity Recognition</li>
+								<li class="icon solid fa-mountain">Climb rocks and hike mountains and such</li>
+							</ul>
+							<p style="font-size:120%;">And if you're looking for some of this info in a more complete and professional form, Here's my <a href="./documents/Reese Grimsley Resume.pdf">resume</a> and <a href=./documents/Reese_Grimsley_CV.pdf>CV</a> (Updated 7/17/2021).
 
-							</div>
-						</section>
+						</div>
+					</section>
 
 
 					<!-- Posts -->
 					
-						<section id="posts">
-							<div class="container">
-								<h3>Other Posts and Activities</h3>
-							<p>Read more about what I've been up to!</p>
-							<div class="features">
-								<article>
-									<a href="#" class="image"><img src="images/TTComp_Intersection_vid.gif" alt="" /></a>
-									<div class="inner">
-										<!-- <h4>Possibly broke spacetime</h4> -->
-										<ul><li><a href="posts/ttpython-comp.html" class="active">Second Place Submission to the Networked Computing on the Edge Student Design Competition in CPS-IoT Week</a></li></ul>
-									</div>
-								</article>
-								<article>
-									<a href="#" class="image"><img src="images/commonsense.jpg" alt="" /></a>
-									<div class="inner">
-										<!-- <h4>Possibly broke spacetime</h4> -->
-										<ul><li><a href="posts/commonsense.html" class="active">Developing some CommonSense about Embedded Hardware/Software Prototyping</a></li></ul>
-									</div>
-								</article>
-								<!-- <article>
-									<a href="#" class="image"><img src="images/doors_quote.jpg" alt="" /></a>
-									<div class="inner">
-										<ul><li><a href="posts/master-out.html" class="active">Career Change: Mastering Out and a Perspective on Life Goals</a></li></ul>
-									</div>
-								</article> -->									
-								<!-- <article>
-									<a href="#" class="image"><img src="images/quals.jpg" alt="" /></a>
-									<div class="inner">
-										<ul><li><a href="posts/master-out.html" class="active">Carnegie Mellon PhD Qualifiers</a></li></ul>
-									</div>
-								</article> -->
-							</div>
-						</section>
+					<section id="posts">
+						<div class="container">
+							<h3>Other Posts and Activities</h3>
+						<p>Read more about what I've been up to!</p>
+						<div class="features">
+							<article>
+								<a href="#" class="image"><img src="images/TTComp_Intersection_vid.gif" alt="" /></a>
+								<div class="inner">
+									<!-- <h4>Possibly broke spacetime</h4> -->
+									<ul><li><a href="posts/ttpython-comp.html" class="active">Second Place Submission to the Networked Computing on the Edge Student Design Competition in CPS-IoT Week</a></li></ul>
+								</div>
+							</article>
+							<!-- <article>
+								<a href="#" class="image"><img src="images/commonsense.jpg" alt="" /></a>
+								<div class="inner">
+									<!-- <h4>Possibly broke spacetime</h4> 
+									<ul><li><a href="posts/commonsense.html" class="active">Developing some CommonSense about Embedded Hardware/Software Prototyping</a></li></ul>
+								</div>
+							</article> -->
+							<!-- <article>
+								<a href="#" class="image"><img src="images/doors_quote.jpg" alt="" /></a>
+								<div class="inner">
+									<ul><li><a href="posts/master-out.html" class="active">Career Change: Mastering Out and a Perspective on Life Goals</a></li></ul>
+								</div>
+							</article> -->									
+							<!-- <article>
+								<a href="#" class="image"><img src="images/quals.jpg" alt="" /></a>
+								<div class="inner">
+									<ul><li><a href="posts/master-out.html" class="active">Carnegie Mellon PhD Qualifiers</a></li></ul>
+								</div>
+							</article> -->
+						</div>
+					</section>
 					
 					<!-- Contact me -->
 					<section id="contact">
