Finish CommonSense post

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://github.com/reese-grimsley" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:reeseg@cmu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/reese-grimsley" class="icon brands fa-github" title="Github Account associated with CMU"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/reesul/" class="icon brands fa-github" title="Personal Github; accounts will be merged in the near future"><span class="label">Github</span></a></li>
+						<li><a href="mailto:rgrimsley1795@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://www.facebook.com/reese.grimsley/" class="icon brands fa-facebook-f" title="Disclaimer: I hardly use FB anymore; I dislike social media"><span class="label">Facebook</span></a></li>
 					</ul>
 				</footer>
@@ -109,13 +110,12 @@
 									<ul><li><a href="posts/ttpython-comp.html" class="active">Second Place Submission to the Networked Computing on the Edge Student Design Competition in CPS-IoT Week</a></li></ul>
 								</div>
 							</article>
-							<!-- <article>
+							<article>
 								<a href="#" class="image"><img src="images/commonsense.jpg" alt="" /></a>
 								<div class="inner">
-									<!-- <h4>Possibly broke spacetime</h4> 
 									<ul><li><a href="posts/commonsense.html" class="active">Developing some CommonSense about Embedded Hardware/Software Prototyping</a></li></ul>
 								</div>
-							</article> -->
+							</article>
 							<!-- <article>
 								<a href="#" class="image"><img src="images/doors_quote.jpg" alt="" /></a>
 								<div class="inner">
