Add EnviSense and TTPython posts

--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
 									<ul><li><a href="posts/commonsense.html" class="active">Developing some CommonSense about Embedded Hardware/Software Prototyping</a></li></ul>
 								</div>
 							</article>
-							<!-- <article>
-								<a href="#" class="image"><img src="images/doors_quote.jpg" alt="" /></a>
+							<article>
+								<a href="#" class="image"><img src="images/PW_highhill.jpg" alt="" /></a>
 								<div class="inner">
-									<ul><li><a href="posts/master-out.html" class="active">Career Change: Mastering Out and a Perspective on Life Goals</a></li></ul>
+									<ul><li><a href="posts/envisense.html" class="active">EnviSense Environmental Sensor Network with the USGS</a></li></ul>
 								</div>
-							</article> -->									
-							<!-- <article>
-								<a href="#" class="image"><img src="images/quals.jpg" alt="" /></a>
+							</article>									
+							<article>
+								<a href="#" class="image"><img src="images/post.png" alt="" /></a>
 								<div class="inner">
-									<ul><li><a href="posts/master-out.html" class="active">Carnegie Mellon PhD Qualifiers</a></li></ul>
+									<ul><li><a href="posts/posts-index.html" class="active">Other Posts</a></li></ul>
 								</div>
-							</article> -->
+							</article>
 						</div>
 					</section>
 					
