--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</header>
 							<p>
 								Internet of Things, Cyber Physical Systems, Wireless Sensor-Actuator Networks. 
-								In my mind, these all represent flavors of the same concept, that is, computers interacting with the physical world and each other; said another way, Distributed Embedded Systems. 
+								In my mind, these all represent flavors of the same concept, that is, computers interacting with the physical world and each other. Said another way, Distributed Embedded Systems. 
 								The concept fascinates me as I imagine widespread environmental monitoring and care, city-scale autonomous vehicle networks, and factories absent of human hands.
 							</p>
 							<p>
