clean up intro text

--- a/index.html
+++ b/index.html
@@ -61,13 +61,10 @@
 								</p>
 							</header>
 							<p>
-								Internet of Things, Cyber Physical Systems, Wireless Sensor-Actuator Networks. 
-								In my mind, these all represent flavors of the same concept, that is, computers interacting with the physical world and each other. Said another way, Distributed Embedded Systems. 
-								The concept fascinates me as I imagine widespread environmental monitoring and care, city-scale autonomous vehicle networks, and factories absent of human hands.
+								Internet of Things, Cyber Physical Systems and Wireless Sensor-Actuator Networks are all examples of Distributed Embedded Systems with micro-controllers and sensors interacting with the physical world and each other.  I see huge potential in these systems driving applications like widespread environmental monitoring and care, city-scale autonomous vehicle networks, and factories absent of human hands. 
 							</p>
 							<p>
-								I see myself progressing through my career as a systems engineer, conscientiously detailing the various modes and mechanisms beginning from a thorough understanding of what problem(s) must be solved, what constraints will impact the solution, and what resources are available. 
-								Currently, I'm at a cusp between academia and industry, having decided to switch modes and explore full-time roles after finishing my second year and passing my PhD qualifying exam in ECE at Carnegie Mellon. 
+								I have a detailed oriented mindset with an interest in systems engineering.  I’m currently at the cusp between academia and industry, having decided to switch modes and explore full-time roles after finishing my second year and passing my PhD qualifying exam in ECE at Carnegie Mellon. My first two years doing a PhD have opened my eyes to a wide variety of topics and problems within this space. The opportunities within this degree allowed me to design, build, and deploy a real sensor network (<a href="posts/envisense.html">EnviSense</a>), create a programming models and distributed runtimes for soft real-time embedded applications (<a href="posts/ttpython.html">TickTalk Python</a>), and prototype my own low-power sensors (<a href="posts/commonsense.html">CommonSense</a>; including hardware/firmware design, PCB production, test and SMT, and teaching colleagues to use them in their own research projects). I could not ask for a better introduction to this field, but I'm itching to cut my teeth at a real systems engineering problem in industry!  
 							</p>
 							<p>
 								Those first two years of a PhD have opened my eyes to a wide variety of topics and problems within this space. 
@@ -81,14 +78,15 @@
 					<section id="things">
 						<div class="container">
 							<h3>Things I Can Do</h3>
-							<p>Along the way, I've learned to do some things. Here are some of those things (not exhaustive):</p>
+							<p>There are a number of skills that I would like to apply in industry.
+								:</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-microchip">Design, Build, and Test PCBs for high performance, low-power sensor devices</li>
 								<li class="icon solid fa-laptop-code">Write C/C++, Python, NodeJS for embedded systems, data analytics & ML, and distributed time-sensitive runtimes</li>
 								<li class="icon solid fa-broadcast-tower">RF Propagation Studies for LPWAN/LoRaWAN sensor deployments</li>
 								<li class="icon solid fa-map-marked">Select/develop hardware & firmware; deploy sensors for real-time measurement systems</li>
 								<li class="icon solid fa-tasks">Data Science & Machine Learning for Signal Processing, like Activity Recognition</li>
-								<li class="icon solid fa-mountain">Climb rocks and hike mountains and such</li>
+								<li class="icon solid fa-mountain">Climb rocks (typically indoor), hike mountains, and snowboard (looking forward to winter at Seven Springs and trips to the Rockies!)</li>
 							</ul>
 							<p style="font-size:120%;">And if you're looking for some of this info in a more complete and professional form, Here's my <a href="./documents/Reese Grimsley Resume.pdf">resume</a> and <a href=./documents/Reese_Grimsley_CV.pdf>CV</a> (Updated 7/17/2021).
 
