fix links on images and within posts-index

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<!-- Skills and hobbies -->
 					<section id="things">
 						<div class="container">
-							<h3>Things I Can Do</h3>
+							<h3>Skills and Such</h3>
 							<p>There are a number of skills that I would like to apply in industry.
 								:</p>
 							<ul class="feature-icons">
@@ -102,26 +102,26 @@
 						<p>Read more about what I've been up to!</p>
 						<div class="features">
 							<article>
-								<a href="#" class="image"><img src="images/TTComp_Intersection_vid.gif" alt="" /></a>
+								<a href="posts/ttpython-comp.html" class="image"><img src="images/TTComp_Intersection_vid.gif" alt="" /></a>
 								<div class="inner">
 									<!-- <h4>Possibly broke spacetime</h4> -->
 									<ul><li><a href="posts/ttpython-comp.html" class="active">Second Place Submission to the Networked Computing on the Edge Student Design Competition in CPS-IoT Week</a></li></ul>
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/commonsense.jpg" alt="" /></a>
+								<a href="posts/commonsense.html" class="image"><img src="images/commonsense.jpg" alt="" /></a>
 								<div class="inner">
 									<ul><li><a href="posts/commonsense.html" class="active">Developing some CommonSense about Embedded Hardware/Software Prototyping</a></li></ul>
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/PW_highhill.jpg" alt="" /></a>
+								<a href="posts/envisense.html" class="image"><img src="images/PW_highhill.jpg" alt="" /></a>
 								<div class="inner">
 									<ul><li><a href="posts/envisense.html" class="active">EnviSense Environmental Sensor Network with the USGS</a></li></ul>
 								</div>
 							</article>									
 							<article>
-								<a href="#" class="image"><img src="images/post.png" alt="" /></a>
+								<a href="posts/posts-index.html" class="image"><img src="images/post.png" alt="" /></a>
 								<div class="inner">
 									<ul><li><a href="posts/posts-index.html" class="active">Other Posts</a></li></ul>
 								</div>
